# coheron

./: .gitignore  Cargo.toml  README.md
docs/: glossary.md  manifesto.md  semantics.md
examples/curves/: Cargo.toml
examples/curves/src/: main.rs
examples/neuron/: Cargo.toml
examples/neuron/src/: main.rs
examples/semantic_engine/: Cargo.toml
examples/semantic_engine/src/: main.rs
src/: beliefs.rs  coherence.rs  core.rs  entangle.rs  fusion.rs  gkernel.rs  lib.rs  resonance.rs  sem_eng.rs  structs.rs  traits.rs  wavelet.rs
